2008-12-10  Neil Roberts  <neil@linux.intel.com>

	Bug 1323 - ClutterBehaviorDepth conflicts with other behaviors

	* clutter/clutter-behaviour-ellipse.c (actor_apply_knot_foreach):
	Don't set the depth if there is no x or y tilt. That way it can
	still be used in conjunction with ClutterBehaviourDepth. Thanks to
	Tonny Tzeng.

2008-12-08  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-binding-pool.h: Fix the ActivateFunc
	documentation by adding a "return value" annotation.

2008-12-08  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/Makefile.am:
	* clutter/clutter.h: Add ClutterBindingPool to the build.

	* clutter/clutter-binding-pool.c:
	* clutter/clutter-binding-pool.h: Add ClutterBindingPool, a data
	structure meant to hold (key symbol, modifiers) pairs and associate
	them to a closure. The ClutterBindingPool can be used to install
	key bindings for actors and then execute closures inside the
	key-press-event signal handlers, removing the need for big
	switch() or if() blocks for each key.

	* clutter/clutter-event.c: Consistently use "key symbol" instead
	of "key value".

	* clutter/clutter-event.h: Add more modifier masks.

	* clutter/clutter-marshal.list:

	* tests/conform/Makefile.am:
	* tests/conform/test-binding-pool.c:
	* tests/conform/test-conform-main.c: Add ClutterBindingPool
	conformance test.

	* tests/interactive/Makefile.am:
	* tests/interactive/test-binding-pool.c: Add interactive test (and
	example code) for the ClutterBindingPool usage.

2008-12-08  Neil Roberts  <neil@linux.intel.com>

	* clutter/clutter-main.c (_clutter_do_pick): Restore the GL_DITHER
	state after reading the pixel value instead of before. Suggested
	in bug 1328 thanks to Guy Zadickario.

2008-12-05  Emmanuele Bassi  <ebassi@linux.intel.com>

	Bug 1309 - clutter_timeline_new and clutter_timeline_set_speed
	have two standard of the fps limitation

	* clutter/clutter-timeline.c:
	(clutter_timeline_class_init): Set the maximum value of the