@@ -115,7 +115,7 @@ typedef struct
   COGL_PFNGLGENBUFFERSARBPROC			   pf_glGenBuffersARB;
   COGL_PFNGLBINDBUFFERARBPROC			   pf_glBindBufferARB;
   COGL_PFNGLBUFFERDATAARBPROC			   pf_glBufferDataARB;
-  COGL_PFNGLBUFFERDATASUBARBPROC		   pf_glBufferDataSubARB;
+  COGL_PFNGLBUFFERSUBDATAARBPROC		   pf_glBufferSubDataARB;
   COGL_PFNGLMAPBUFFERARBPROC			   pf_glMapBufferARB;
   COGL_PFNGLUNMAPBUFFERARBPROC			   pf_glUnmapBufferARB;
   COGL_PFNGLDELETEBUFFERSARBPROC		   pf_glDeleteBuffersARB;
